--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -764,6 +764,35 @@ blockquote {
   min-height: 4.5rem;
 }
 
+.collections-title {
+  text-align: center;
+}
+
+.collections-title h2 {
+  line-height: 1.4;
+}
+
+.collection-links {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: 100%;
+  max-width: 100vw;
+  min-height: 5rem;
+}
+
+.collection-links-text {
+  height: auto;
+  text-align: center;
+}
+
+.collection-links-text h3 {
+  color: white;
+  line-height: 1.5;
+  padding: 1em 0 0.5em 0;
+  font-size: 1.5rem;
+}
+
 .collections-button-grid {
   display: flex;
   flex-direction: column;
@@ -772,7 +801,7 @@ blockquote {
   height: auto;
   margin: 0 auto;
   padding-bottom: 0;
-  gap: 0.2em;
+  gap: 0;
 }
 
 button.submit-button {
@@ -911,6 +940,20 @@ button.submit-button:hover {
 }
 
 @media (max-width:768px) {
+  .collections-border {
+    border: 0.5em solid black;
+    outline: 0.5em solid white;
+    outline-offset: 0.5em;
+    padding: 1em;
+    margin: 1em auto 1em;
+    width: 80%;
+    max-width: 80vw;
+    height: auto;
+  }
+
+  .collections-button-grid {
+    gap: 1em;
+  }
 
   .collection-title {
     width: 80%;
