removed content layout from nav-links

--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -38,6 +38,10 @@
     min-height: 250rem;
   }
 
+  main#about-me {
+    min-height: 560rem;
+  }
+
   .casestudy {
     min-height: auto;
     visibility: visible;
