--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -11,6 +11,7 @@
     padding: 2em 1em;
     background-color: #000;
     box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1);
+    contain: layout paint style;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -18,7 +19,7 @@
   }
 
   main#projects {
-    min-height: 100vh;
+    min-height: 450rem;
   }
 
   main#casestudy {
