--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -308,9 +308,9 @@ nav {
 
 .nav-logo {
   max-width: 160px;
-  max-height: 80px;
   overflow: hidden;
   height: auto;
+  aspect-ratio: 144 / 62;
   justify-content: center;
   align-items: center;
   background-color: #000;
