--- a/styles/styles.css
+++ b/styles/styles.css
@@ -767,6 +767,27 @@ button.submit-button:hover {
   padding: 0.9375em 0;
 }
 
+main#collections-page {
+  width: 54%;
+  max-width: 54vw;
+  margin: 5em auto;
+  padding: 2em 1em;
+  background-color: #000;
+  box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1);
+  contain: layout paint style;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  overflow-anchor: none;
+}
+
+main#collections-page {
+  min-height: 100vh;
+}
+
+.collections-row {
+  min-height: 50rem;
+}
 
 .hamburger-nav-links {
   display: none;
