--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -74,7 +74,7 @@
     margin: 1em auto 2em;
     background-color: #fff;
     width: 98%;
-    padding: 1em;
+    padding: 2em 1em;
     min-height: 8rem;
   }
 
