--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -662,10 +662,10 @@ footer {
 .resume-summary h2 {
   width: 100%;
   height: auto;
-  padding: 2em 0 1em;
+  padding: 0.5em 1em;
   font-size: clamp(1rem, 1.8rem, 2rem);
   line-height: 1.6;
-  min-height: 8rem;
+  min-height: 4rem;
 }
 
 .resume-summary h2,
