--- a/styles/styles.css
+++ b/styles/styles.css
@@ -592,8 +592,7 @@ main #skills-pages {
   max-width: 100vw;
 }
 
-.resume-summary h3 a,
-.resume-summary h2 {
+.resume-summary h3 a {
   width: 100%;
   height: auto;
   min-height: 1.5rem;
@@ -601,7 +600,6 @@ main #skills-pages {
   font-size: clamp(1rem, 1.2rem, 1.8rem);
 }
 
-.resume-summary h2,
 .resume-summary h3 {
   color: white;
   min-height: 2rem;
