added min-height to form

--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -46,6 +46,10 @@
     min-height: 118rem;
   }
 
+  main#contactme-form {
+    min-height: 90rem;
+  }
+
   .casestudy {
     min-height: auto;
     visibility: visible;
